[gd_scene load_steps=3 format=3 uid="uid://c27kbtghycnu1"]

[ext_resource type="Script" path="res://Menus/Character Menu/UIOverlay.gd" id="1_rpnp1"]

[sub_resource type="Theme" id="Theme_yvswa"]

[node name="UiOverlay" type="MenuBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rpnp1")

[node name="CharacterMenu" type="PopupMenu" parent="."]
position = Vector2i(642, 100)
item_count = 1
item_0/text = ""
item_0/id = 0

[node name="Roster Editor" type="PopupMenu" parent="."]

[node name="CharacterSheetPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 34.0
offset_top = -77.0
offset_right = 509.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="Control" parent="CharacterSheetPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yvswa")

[node name="NameLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 21.0
offset_top = 56.0
offset_right = 22.0
offset_bottom = 79.0
text = "##"

[node name="LevelLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 196.0
offset_top = 55.0
offset_right = 197.0
offset_bottom = 78.0
text = "##"

[node name="ClassLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 125.0
offset_top = 112.0
offset_right = 126.0
offset_bottom = 135.0
text = "##"

[node name="StrLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 14.0
offset_top = 127.0
offset_right = 35.0
offset_bottom = 150.0
text = "##"

[node name="MagLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 13.0
offset_top = 151.0
offset_right = 34.0
offset_bottom = 174.0
text = "##"

[node name="DexLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 12.0
offset_top = 176.0
offset_right = 33.0
offset_bottom = 199.0
text = "##"

[node name="SpdLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 11.0
offset_top = 200.0
offset_right = 32.0
offset_bottom = 223.0
text = "##"

[node name="SkillLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 11.0
offset_top = 230.0
offset_right = 32.0
offset_bottom = 253.0
text = "##"

[node name="DefLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 64.0
offset_top = 127.0
offset_right = 85.0
offset_bottom = 150.0
text = "##"

[node name="ResLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 64.0
offset_top = 152.0
offset_right = 85.0
offset_bottom = 175.0
text = "##"

[node name="LckLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 65.0
offset_top = 179.0
offset_right = 86.0
offset_bottom = 202.0
text = "##"

[node name="RatingLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 63.0
offset_top = 211.0
offset_right = 84.0
offset_bottom = 234.0
text = "##"

[node name="Ph_AtkLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 163.0
offset_top = 204.0
offset_right = 184.0
offset_bottom = 227.0
text = "##"

[node name="Mag_AtkLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 161.0
offset_top = 228.0
offset_right = 182.0
offset_bottom = 251.0
text = "##"

[node name="HitLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 164.0
offset_top = 256.0
offset_right = 185.0
offset_bottom = 279.0
text = "##"

[node name="AvoLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 165.0
offset_top = 284.0
offset_right = 186.0
offset_bottom = 307.0
text = "##"

[node name="CritLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 297.0
offset_top = 200.0
offset_right = 318.0
offset_bottom = 223.0
text = "##"

[node name="DdgLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 298.0
offset_top = 223.0
offset_right = 319.0
offset_bottom = 246.0
text = "##"

[node name="RngLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 300.0
offset_top = 245.0
offset_right = 321.0
offset_bottom = 268.0
text = "##"

[node name="HPLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 302.0
offset_top = 267.0
offset_right = 323.0
offset_bottom = 290.0
text = "##"

[node name="ManaLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 299.0
offset_top = 289.0
offset_right = 320.0
offset_bottom = 312.0
text = "##"

[node name="MovLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 300.0
offset_top = 310.0
offset_right = 321.0
offset_bottom = 333.0
text = "##"

[node name="MtLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 262.0
offset_top = 140.0
offset_right = 283.0
offset_bottom = 163.0
text = "##"

[node name="CritChanceLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 349.0
offset_top = 117.0
offset_right = 370.0
offset_bottom = 140.0
text = "##"

[node name="HitChanceLabel" type="Label" parent="CharacterSheetPanel/VBoxContainer"]
layout_mode = 2
offset_left = 357.0
offset_top = 61.0
offset_right = 378.0
offset_bottom = 84.0
text = "##"

[node name="CharacterPortrait" type="TextureRect" parent="CharacterSheetPanel"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SkillsList" type="ItemList" parent="CharacterSheetPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemsList" type="ItemList" parent="CharacterSheetPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RosterEditor" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -395.0
offset_top = -176.0
offset_right = -44.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RosterEditor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AddCharacterButton" type="Button" parent="RosterEditor/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Character Below"

[node name="AddCharacterLineEdit" type="LineEdit" parent="RosterEditor/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Character Name"

[node name="RemoveCharacterButton" type="Button" parent="RosterEditor/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove Character Below"

[node name="RemoveCharacterLineEdit" type="LineEdit" parent="RosterEditor/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Character Name"

[node name="ExperienceInput" type="LineEdit" parent="RosterEditor/VBoxContainer"]
layout_mode = 2
text = "18"

[node name="AddExpButton" type="Button" parent="RosterEditor/VBoxContainer"]
layout_mode = 2
text = "Add Exp"

[connection signal="index_pressed" from="CharacterMenu" to="." method="_on_character_menu_index_pressed"]
[connection signal="pressed" from="RosterEditor/VBoxContainer/AddCharacterButton" to="." method="_on_add_character_button_pressed"]
[connection signal="pressed" from="RosterEditor/VBoxContainer/RemoveCharacterButton" to="." method="_on_remove_character_button_pressed"]
[connection signal="text_submitted" from="RosterEditor/VBoxContainer/ExperienceInput" to="." method="_on_experience_input_text_submitted"]
[connection signal="pressed" from="RosterEditor/VBoxContainer/AddExpButton" to="." method="_on_add_exp_button_pressed"]
